--- a/Views/Registro/Principal.cshtml
+++ b/Views/Registro/Principal.cshtml
@@ -4,11 +4,13 @@
     <a class="btn btn-primary" asp-controller="Registro" asp-action="Auxiliar">Auxiliares</a>
 
 </p>
+<img src="images/ironMan.jpg" alt="Sample Photo" />
+<img src="@Url.Action("MostrarImagen", "File")" alt="Imagen de ejemplo" />
 
 <div class="col-xl-3 col-md-6">
     <div class="card bg-dark text-white mb-4">
-        <div class="card-body">IMG</div>
-        <img asp-controller="File" src="@Url.Action("MostrarImagen")" alt="Imagen de ejemplo" />
+        <div class="card-body imagen"></div>
+       
         <div class="card-footer d-flex align-items-center justify-content-between">
             <a class="small text-white stretched-link" asp-controller="Comunidads" asp-action="Index">Comunidades</a>
             <div class="small text-white"><i class="fas fa-angle-right"></i></div>
