Generar reporte en PDF de cada tabla

--- a/Views/Gradoes/Index.cshtml
+++ b/Views/Gradoes/Index.cshtml
@@ -9,6 +9,10 @@
 <p>
     <a asp-action="Create">Create New</a>
 </p>
+
+<p>
+    <a asp-controller="Gradoes" asp-action="ImprimirGrado" target="_blank" class="btn btn-info text-white">Generar PDF</a>
+</p>
 <table class="table">
     <thead>
         <tr>
