--- a/Views/Areas/Index.cshtml
+++ b/Views/Areas/Index.cshtml
@@ -9,6 +9,9 @@
 <p>
     <a asp-action="Create">Create New</a>
 </p>
+<p>
+    <a asp-controller="Areas" asp-action="ImprimirArea" target="_blank" class="btn btn-info text-white">Generar PDF</a>
+</p>
 <table class="table">
     <thead>
         <tr>
