--- a/Views/Registro/Principal.cshtml
+++ b/Views/Registro/Principal.cshtml
@@ -1,19 +1,73 @@
-﻿<h1>REGISTROS PRINCIPALES</h1>
-<p>
-    <a class="btn btn-primary" asp-controller="Registro" asp-action="Principal">Principales</a>
-    <a class="btn btn-primary" asp-controller="Registro" asp-action="Auxiliar">Auxiliares</a>
+﻿<h1 class="text-center">REGISTROS PRINCIPALES</h1>
+<p class="text-end">
+    <a class="btn btn-outline-success" asp-controller="Registro" asp-action="Principal">Principales</a>
+    <a class="btn btn-success" asp-controller="Registro" asp-action="Auxiliar">Auxiliares</a>
 
 </p>
-<img src="images/ironMan.jpg" alt="Sample Photo" />
-<img src="@Url.Action("MostrarImagen", "File")" alt="Imagen de ejemplo" />
+<hr class="LineaRecta" />
 
-<div class="col-xl-3 col-md-6">
-    <div class="card bg-dark text-white mb-4">
-        <div class="card-body imagen"></div>
-       
-        <div class="card-footer d-flex align-items-center justify-content-between">
-            <a class="small text-white stretched-link" asp-controller="Comunidads" asp-action="Index">Comunidades</a>
-            <div class="small text-white"><i class="fas fa-angle-right"></i></div>
+
+<div class="row ">
+    <div class="col-sm-3">
+        <div class="card text-white mb-3 tarjetaPrincipal " style="max-width: 20rem;">
+            <a asp-controller="Estudiantes" asp-action="Create">
+                <div class=" card-body primeraTarjeta">
+                </div>
+                <div class="card-header textHeader text-center">Historial de Estudiante</div>
+            </a>
         </div>
+
+    </div>
+    <div class="col-sm-3">
+        <div class="card text-white mb-3 tarjetaPrincipal " style="max-width: 20rem;">
+            <a asp-controller="EstudiantePatrocinadors" asp-action="Create">
+                <div class=" card-body primeraTarjeta">
+                </div>
+                <div class="card-header textHeader text-center">Benificiarios </div>
+            </a>
+        </div>
+
+    </div>
+    <div class="col-sm-3">
+        <div class="card text-white mb-3 tarjetaPrincipal " style="max-width: 20rem;">
+            <a asp-controller="FichaCalificacions" asp-action="Create">
+                <div class=" card-body primeraTarjeta">
+                </div>
+                <div class="card-header textHeader text-center">Calificaiones</div>
+            </a>
+        </div>
+
+    </div>
+</div>
+<div class="row">
+    <div class="col-sm-3">
+        <div class="card text-white mb-3 tarjetaPrincipal " style="max-width: 20rem;">
+            <a asp-controller="Gastoes" asp-action="Create">
+                <div class=" card-body primeraTarjeta">
+                </div>
+                <div class="card-header textHeader text-center"> Gastos</div>
+            </a>
+        </div>
+
+    </div>
+    <div class="col-sm-3">
+        <div class="card text-white mb-3 tarjetaPrincipal " style="max-width: 20rem;">
+            <a asp-controller="OrdenCompras" asp-action="Create">
+                <div class=" card-body primeraTarjeta">
+                </div>
+                <div class="card-header textHeader text-center">Compras</div>
+            </a>
+        </div>
+
+    </div>
+    <div class="col-sm-3">
+        <div class="card text-white mb-3 tarjetaPrincipal " style="max-width: 20rem;">
+            <a asp-controller="Tutoriums" asp-action="Create">
+                <div class=" card-body primeraTarjeta">
+                </div>
+                <div class="card-header textHeader text-center"> Tutorias</div>
+            </a>
+        </div>
+
     </div>
 </div>
