Modificando el archivo auxiliar

--- a/Views/Registro/Auxiliar.cshtml
+++ b/Views/Registro/Auxiliar.cshtml
@@ -1,18 +1,121 @@
-﻿
-<h1>REGISTROS AUXILIARES</h1>
-<p>
-    <a class="btn btn-primary" asp-controller="Registro" asp-action="Principal">Principales</a>
-    <a class="btn btn-primary" asp-controller="Registro" asp-action="Auxiliar">Auxiliares</a>
+﻿<h1>REGISTROS AUXILIARES</h1>
+<p class="text-end">
+    <a class="btn btn-success" asp-controller="Registro" asp-action="Principal">Principales</a>
+    <a class="btn btn-outline-success" asp-controller="Registro" asp-action="Auxiliar">Auxiliares</a>
 
 </p>
 
-<div class="col-xl-3 col-md-6">
-    <div class="card bg-dark text-white mb-4">
-        <div class="card-body">IMG</div>
-        <img asp-controller="File" src="@Url.Action("MostrarImagen")" alt="Imagen de ejemplo" />
-        <div class="card-footer d-flex align-items-center justify-content-between">
-            <a class="small text-white stretched-link" asp-controller="Comunidads" asp-action="Index">Comunidades</a>
-            <div class="small text-white"><i class="fas fa-angle-right"></i></div>
+<div class="row ">
+    <div class="col-sm-3">
+        <div class="card text-white mb-3 tarjetaPrincipal " style="max-width: 20rem;">
+            <a asp-controller="Carreras" asp-action="Create">
+                <div class=" card-body primeraTarjeta">
+                </div>
+                <div class="card-header textHeader text-center"> Carreras</div>
+            </a>
         </div>
+
     </div>
+    <div class="col-sm-3">
+        <div class="card text-white mb-3 tarjetaPrincipal " style="max-width: 20rem;">
+            <a asp-controller="Comunidads" asp-action="Create">
+                <div class=" card-body primeraTarjeta">
+                </div>
+                <div class="card-header textHeader text-center">Comunidades</div>
+            </a>
+        </div>
+
+    </div>
+</div>
+<div>
+    <div class="col-sm-3">
+        <div class="card text-white mb-3 tarjetaPrincipal " style="max-width: 20rem;">
+            <a asp-controller="Cursoes" asp-action="Create">
+                <div class=" card-body primeraTarjeta">
+                </div>
+                <div class="card-header textHeader text-center"> Cursos</div>
+            </a>
+        </div>
+
+    </div>
+</div>
+<div class="row ">
+ <div class="col-sm-3">
+        <div class="card text-white mb-3 tarjetaPrincipal " style="max-width: 20rem;">
+            <a asp-controller="Establecimientoes" asp-action="Create">
+                <div class=" card-body primeraTarjeta">
+                </div>
+                <div class="card-header textHeader text-center">Establecimiento</div>
+            </a>
+        </div>
+
+    </div>
+    <div class="col-sm-3">
+        <div class="card text-white mb-3 tarjetaPrincipal " style="max-width: 20rem;">
+            <a asp-controller="Gradoes" asp-action="Create">
+                <div class=" card-body primeraTarjeta">
+                </div>
+                <div class="card-header textHeader text-center"> Grados</div>
+            </a>
+        </div>
+
+    </div>
+</div>
+<div class="row ">
+    <div class="col-sm-3">
+        <div class="card text-white mb-3 tarjetaPrincipal " style="max-width: 20rem;">
+            <a asp-controller="NivelAcademicoes" asp-action="Create">
+                <div class=" card-body primeraTarjeta">
+                </div>
+                <div class="card-header textHeader text-center">Nivel académicos</div>
+            </a>
+        </div>
+</div>
+    </div>
+    <div class="col-sm-3">
+        <div class="card text-white mb-3 tarjetaPrincipal " style="max-width: 20rem;">
+            <a asp-controller="Pais" asp-action="Create">
+                <div class=" card-body primeraTarjeta">
+                </div>
+                <div class="card-header textHeader text-center"> Países</div>
+            </a>
+        </div>
+
+    </div>
+
+    <div class="col-sm-3">
+        <div class="card text-white mb-3 tarjetaPrincipal " style="max-width: 20rem;">
+            <a asp-controller="Patrocinadors" asp-action="Create">
+                <div class=" card-body primeraTarjeta">
+                </div>
+                <div class="card-header textHeader text-center"> Patrocinadores</div>
+            </a>
+        </div>
+
+    </div>
+<div class="row">
+    
+    <div class="col-sm-3">
+        <div class="card text-white mb-3 tarjetaPrincipal " style="max-width: 20rem;">
+            <a asp-controller="Proveedors" asp-action="Create">
+                <div class=" card-body primeraTarjeta">
+                </div>
+                <div class="card-header textHeader text-center"> Proveedores</div>
+            </a>
+        </div>
+
+    </div>
+
+
+    <div class="col-sm-3">
+        <div class="card text-white mb-3 tarjetaPrincipal " style="max-width: 20rem;">
+            <a asp-controller="Profesions" asp-action="Create">
+                <div class=" card-body primeraTarjeta">
+                </div>
+                <div class="card-header textHeader text-center"> Profesiones</div>
+            </a>
+        </div>
+
+    </div>
+  
 </div>
