--- a/Views/Registro/Auxiliar.cshtml
+++ b/Views/Registro/Auxiliar.cshtml
@@ -1,7 +1,7 @@
-﻿<h1>REGISTROS AUXILIARES</h1>
+﻿<h1 class ="text-center">REGISTROS AUXILIARES</h1>
 <p class="text-end">
-    <a class="btn btn-success" asp-controller="Registro" asp-action="Principal">Principales</a>
-    <a class="btn btn-outline-success" asp-controller="Registro" asp-action="Auxiliar">Auxiliares</a>
+    <a class="btn btn-outline-success" asp-controller="Registro" asp-action="Principal">Principales</a>
+    <a class="btn btn-success" asp-controller="Registro" asp-action="Auxiliar">Auxiliares</a>
 
 </p>
 
@@ -14,7 +14,6 @@
                 <div class="card-header textHeader text-center"> Carreras</div>
             </a>
         </div>
-
     </div>
     <div class="col-sm-3">
         <div class="card text-white mb-3 tarjetaPrincipal " style="max-width: 20rem;">
@@ -26,8 +25,6 @@
         </div>
 
     </div>
-</div>
-<div>
     <div class="col-sm-3">
         <div class="card text-white mb-3 tarjetaPrincipal " style="max-width: 20rem;">
             <a asp-controller="Cursoes" asp-action="Create">
@@ -39,8 +36,9 @@
 
     </div>
 </div>
+
 <div class="row ">
- <div class="col-sm-3">
+    <div class="col-sm-3">
         <div class="card text-white mb-3 tarjetaPrincipal " style="max-width: 20rem;">
             <a asp-controller="Establecimientoes" asp-action="Create">
                 <div class=" card-body primeraTarjeta">
@@ -60,8 +58,8 @@
         </div>
 
     </div>
-</div>
-<div class="row ">
+
+
     <div class="col-sm-3">
         <div class="card text-white mb-3 tarjetaPrincipal " style="max-width: 20rem;">
             <a asp-controller="NivelAcademicoes" asp-action="Create">
@@ -70,8 +68,13 @@
                 <div class="card-header textHeader text-center">Nivel académicos</div>
             </a>
         </div>
-</div>
     </div>
+</div>
+
+
+
+<div class="row ">
+  
     <div class="col-sm-3">
         <div class="card text-white mb-3 tarjetaPrincipal " style="max-width: 20rem;">
             <a asp-controller="Pais" asp-action="Create">
@@ -93,8 +96,6 @@
         </div>
 
     </div>
-<div class="row">
-    
     <div class="col-sm-3">
         <div class="card text-white mb-3 tarjetaPrincipal " style="max-width: 20rem;">
             <a asp-controller="Proveedors" asp-action="Create">
@@ -105,8 +106,10 @@
         </div>
 
     </div>
+</div>
 
-
+<div class="row">
+   
     <div class="col-sm-3">
         <div class="card text-white mb-3 tarjetaPrincipal " style="max-width: 20rem;">
             <a asp-controller="Profesions" asp-action="Create">
