--- a/Views/Patrocinadors/Index.cshtml
+++ b/Views/Patrocinadors/Index.cshtml
@@ -9,6 +9,12 @@
 <p>
     <a asp-action="Create">Create New</a>
 </p>
+
+
+<p>
+    <a asp-controller="Patrocinadors" asp-action="ImprimirPatrocinador" target="_blank" class="btn btn-info text-white">Generar PDF</a>
+</p>
+
 <table class="table">
     <thead>
         <tr>
