--- a/Views/Registro/Auxiliar.cshtml
+++ b/Views/Registro/Auxiliar.cshtml
@@ -9,7 +9,7 @@
     <div class="col-sm-3">
         <div class="card text-white mb-3 tarjetaPrincipal " style="max-width: 20rem;">
             <a asp-controller="Carreras" asp-action="Create">
-                <div class=" card-body primeraTarjeta">
+                <div class=" card-body primeraTarjeta001">
                 </div>
                 <div class="card-header textHeader text-center"> Carreras</div>
             </a>
@@ -18,7 +18,7 @@
     <div class="col-sm-3">
         <div class="card text-white mb-3 tarjetaPrincipal " style="max-width: 20rem;">
             <a asp-controller="Comunidads" asp-action="Create">
-                <div class=" card-body primeraTarjeta">
+                <div class=" card-body primeraTarjeta002">
                 </div>
                 <div class="card-header textHeader text-center">Comunidades</div>
             </a>
@@ -28,7 +28,7 @@
     <div class="col-sm-3">
         <div class="card text-white mb-3 tarjetaPrincipal " style="max-width: 20rem;">
             <a asp-controller="Cursoes" asp-action="Create">
-                <div class=" card-body primeraTarjeta">
+                <div class=" card-body primeraTarjeta003">
                 </div>
                 <div class="card-header textHeader text-center"> Cursos</div>
             </a>
@@ -39,9 +39,9 @@
 
 <div class="row ">
     <div class="col-sm-3">
-        <div class="card text-white mb-3 tarjetaPrincipal " style="max-width: 20rem;">
+        <div class="card text-white mb-3 tarjetaPrincipal004 " style="max-width: 20rem;">
             <a asp-controller="Establecimientoes" asp-action="Create">
-                <div class=" card-body primeraTarjeta">
+                <div class=" card-body primeraTarjeta004">
                 </div>
                 <div class="card-header textHeader text-center">Establecimiento</div>
             </a>
@@ -49,9 +49,9 @@
 
     </div>
     <div class="col-sm-3">
-        <div class="card text-white mb-3 tarjetaPrincipal " style="max-width: 20rem;">
+        <div class="card text-white mb-3 tarjetaPrincipal005 " style="max-width: 20rem;">
             <a asp-controller="Gradoes" asp-action="Create">
-                <div class=" card-body primeraTarjeta">
+                <div class=" card-body primeraTarjeta005">
                 </div>
                 <div class="card-header textHeader text-center"> Grados</div>
             </a>
@@ -63,7 +63,7 @@
     <div class="col-sm-3">
         <div class="card text-white mb-3 tarjetaPrincipal " style="max-width: 20rem;">
             <a asp-controller="NivelAcademicoes" asp-action="Create">
-                <div class=" card-body primeraTarjeta">
+                <div class=" card-body primeraTarjeta006">
                 </div>
                 <div class="card-header textHeader text-center">Nivel académicos</div>
             </a>
@@ -78,7 +78,7 @@
     <div class="col-sm-3">
         <div class="card text-white mb-3 tarjetaPrincipal " style="max-width: 20rem;">
             <a asp-controller="Pais" asp-action="Create">
-                <div class=" card-body primeraTarjeta">
+                <div class=" card-body primeraTarjeta007">
                 </div>
                 <div class="card-header textHeader text-center"> Países</div>
             </a>
@@ -89,7 +89,7 @@
     <div class="col-sm-3">
         <div class="card text-white mb-3 tarjetaPrincipal " style="max-width: 20rem;">
             <a asp-controller="Patrocinadors" asp-action="Create">
-                <div class=" card-body primeraTarjeta">
+                <div class=" card-body primeraTarjeta008">
                 </div>
                 <div class="card-header textHeader text-center"> Patrocinadores</div>
             </a>
@@ -99,7 +99,7 @@
     <div class="col-sm-3">
         <div class="card text-white mb-3 tarjetaPrincipal " style="max-width: 20rem;">
             <a asp-controller="Proveedors" asp-action="Create">
-                <div class=" card-body primeraTarjeta">
+                <div class=" card-body primeraTarjeta009">
                 </div>
                 <div class="card-header textHeader text-center"> Proveedores</div>
             </a>
@@ -113,7 +113,7 @@
     <div class="col-sm-3">
         <div class="card text-white mb-3 tarjetaPrincipal " style="max-width: 20rem;">
             <a asp-controller="Profesions" asp-action="Create">
-                <div class=" card-body primeraTarjeta">
+                <div class=" card-body primeraTarjeta0010">
                 </div>
                 <div class="card-header textHeader text-center"> Profesiones</div>
             </a>
