--- a/Views/Registro/Principal.cshtml
+++ b/Views/Registro/Principal.cshtml
@@ -11,7 +11,7 @@
     <div class="col-sm-3">
         <div class="card text-white mb-3 tarjetaPrincipal " style="max-width: 20rem;">
             <a asp-controller="Estudiantes" asp-action="Create">
-                <div class=" card-body primeraTarjeta">
+                <div class=" card-body primeraTarjeta1">
                 </div>
                 <div class="card-header textHeader text-center">Actualización de Estudiante</div>
             </a>
