--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -28,7 +28,7 @@ body {
     height: 200px;
 }
 
-.primeraTarjeta {
+.primeraTarjeta1 {
     background-image: url("../images/01.jpg");
     height: 150px;
     /* background-color: #ffd800;*/
