--- a/Views/Registro/Principal.cshtml
+++ b/Views/Registro/Principal.cshtml
@@ -10,8 +10,8 @@
 <div class="row ">
     <div class="col-sm-3">
         <div class="card text-white mb-3 tarjetaPrincipal " style="max-width: 20rem;">
-            <a asp-controller="Estudiantes" asp-action="Create">
-                <div class=" card-body primeraTarjeta1">
+            <a asp-controller="HistorialEstudiantes" asp-action="Create">
+                <div class=" card-body primeraTarjeta">
                 </div>
                 <div class="card-header textHeader text-center">Actualización de Estudiante</div>
             </a>
@@ -20,7 +20,7 @@
     </div>
     <div class="col-sm-3">
         <div class="card text-white mb-3 tarjetaPrincipal " style="max-width: 20rem;">
-            <a asp-controller="EstudiantePatrocinadors" asp-action="Create">
+            <a asp-controller="Estudiantes" asp-action="Create">
                 <div class=" card-body primeraTarjeta2">
                 </div>
                 <div class="card-header textHeader text-center">Benificiarios </div>
