--- a/Views/Gastoes/Create.cshtml
+++ b/Views/Gastoes/Create.cshtml
@@ -4,54 +4,82 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="~/css/formularioscrear.css" asp-append-version="true" />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+          integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+          crossorigin="anonymous">
+    <title>Document</title>
+</head>
+<body>
 
-<h4>Gasto</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
+    <div id="layoutSidenav_content">
+        <main>
+            <div class="container-fluid px-4">
+                <h1 class="mt-4">Create</h1>
+                <h4>Gasto</h4>
+
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                    <div class="row">
+                        <div class="col-md-4">
             <div class="form-group">
                 <label asp-for="CodigoEstudiante" class="control-label"></label>
                 <select asp-for="CodigoEstudiante" class ="form-control" asp-items="ViewBag.CodigoEstudiante"></select>
-            </div>
+            </div></div>
+                        <div class="col-md-4">
             <div class="form-group">
                 <label asp-for="TipoPago" class="control-label"></label>
                 <input asp-for="TipoPago" class="form-control" />
                 <span asp-validation-for="TipoPago" class="text-danger"></span>
-            </div>
+            </div></div>
+                        <div class="col-md-4">
             <div class="form-group">
                 <label asp-for="FechaEntrega" class="control-label"></label>
                 <input asp-for="FechaEntrega" class="form-control" />
                 <span asp-validation-for="FechaEntrega" class="text-danger"></span>
-            </div>
+            </div></div></div>
+                    <div class="row">
+                        <div class="col-md-4">
             <div class="form-group">
                 <label asp-for="NumeroDocumento" class="control-label"></label>
                 <input asp-for="NumeroDocumento" class="form-control" />
                 <span asp-validation-for="NumeroDocumento" class="text-danger"></span>
-            </div>
+            </div></div>
+                        <div class="col-md-4">
             <div class="form-group">
                 <label asp-for="Monto" class="control-label"></label>
                 <input asp-for="Monto" class="form-control" />
                 <span asp-validation-for="Monto" class="text-danger"></span>
-            </div>
+            </div></div>
+                        <div class="col-md-4">
             <div class="form-group">
                 <label asp-for="Descripcion" class="control-label"></label>
                 <input asp-for="Descripcion" class="form-control" />
                 <span asp-validation-for="Descripcion" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+            </div></div></div>
+
+                    <div class="d-flex justify-content-end">
+                <input type="submit" value="Create" class="btn btn-primary me-2 w-25" />
+                        <a class="btn btn-outline-info me-2 w-25" asp-action="Index">Back to List</a>
             </div>
         </form>
     </div>
+    </main>
 </div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
+
+    
+
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
+
+</body>
+</html>
