PDF agregado al resto de tablas

--- a/Views/Profesions/Index.cshtml
+++ b/Views/Profesions/Index.cshtml
@@ -20,6 +20,10 @@
     </p>
 </form>
 
+<p>
+    <a asp-controller="Profesions" asp-action="ImprimirProfesiones" target="_blank" class="btn btn-info text-white">Generar PDF</a>
+</p>
+
 <table class="table">
     <thead>
         <tr>
