--- a/Views/Tutors/Index.cshtml
+++ b/Views/Tutors/Index.cshtml
@@ -9,6 +9,11 @@
 <p>
     <a asp-action="Create">Create New</a>
 </p>
+
+<p>
+    <a asp-controller="Tutors" asp-action="ImprimirTutor" target="_blank" class="btn btn-info text-white">Generar PDF</a>
+</p>
+
 <table class="table">
     <thead>
         <tr>
