--- a/Views/FichaCalificacions/Index.cshtml
+++ b/Views/FichaCalificacions/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model IEnumerable<systemquchooch.Models.FichaCalificacion>
+﻿@model Paginacion<FichaCalificacion>
+@using systemquchooch.Data;
 
 @{
     ViewData["Title"] = "Index";
@@ -13,36 +14,43 @@
 <p>
     <a asp-controller="FichaCalificacions" asp-action="ImprimirFichaCalificacions" target="_blank" class="btn btn-info text-white">Generar PDF</a>
 </p>
+<form asp-controller="FichaCalificacions" asp-action="Index">
+    <p>
+        Buscar: <input type="text" name="buscar" class="form-text" />
+        <input type="submit" value="Buscar" class="btn btn-sm btn-dark" />
+        <a asp-action="Index" class="btn btn-outline-info">Lista completa</a>
+    </p>
+</form>
 
 <table class="table">
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.FechaEntrega)
+                FechaEntrega
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Notas)
+                Notas
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Promedio)
+                Promedio
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.ImagenFicha)
+                ImagenFicha
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.ImagenEstudiante)
+                ImagenEstudiante
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.ImagenCarta)
+                ImagenCarta
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.CodigoDesempeñoNavigation)
+                CodigoDesempeñoNavigation
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.CodigoEstudianteNavigation)
+                CodigoEstudianteNavigation
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.CodigoPeriodoNavigation)
+                CodigoPeriodoNavigation
             </th>
             <th></th>
         </tr>
@@ -86,3 +94,29 @@
 }
     </tbody>
 </table>
+
+@{
+    var anteriordeshabilitado = !Model.PaginasAnteriores ? "disabled" : "";
+    var siguientedeshabilitado = !Model.PaginasPosteriores ? "disabled" : "";
+}
+
+<div class="container mt-3">
+    <ul class="pagination pagination-lg justify-content-end">
+        <a asp-action="Index" asp-route-ordenActual="@ViewData["OrdenActual"]"
+           asp-route-numpag="@(Model.PaginaInicio - 1)" asp-route-filtroActual="@ViewData["FiltroActual"]"
+           class="btn btn-primary @anteriordeshabilitado">Anterior</a>
+
+        @for (var i = 1; i <= Model.PaginasTotales; i++)
+        {
+            var paginaactiva = (i == Model.PaginaInicio) ? "active" : "";
+            <a asp-action="Index" asp-route-ordenActual="@ViewData["OrdenActual"]" asp-route-numpag="@i"
+           asp-route-filtroActual="@ViewData["FiltroActual"]" class="btn btn-primary @paginaactiva">
+                @i
+            </a>
+        }
+
+        <a asp-action="Index" asp-route-ordenActual="@ViewData["OrdenActual"]"
+           asp-route-numpag="@(Model.PaginaInicio + 1)" asp-route-filtroActual="@ViewData["FiltroActual"]"
+           class="btn btn-primary @siguientedeshabilitado">Siguiente</a>
+    </ul>
+</div>
