--- a/Views/Tutoriums/Index.cshtml
+++ b/Views/Tutoriums/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model IEnumerable<systemquchooch.Models.Tutorium>
+﻿@model Paginacion<Tutorium>
+@using systemquchooch.Data;
 
 @{
     ViewData["Title"] = "Index";
@@ -13,30 +14,37 @@
 <p>
     <a asp-controller="Tutoriums" asp-action="ImprimirTutoria" target="_blank" class="btn btn-info text-white">Generar PDF</a>
 </p>
+<form asp-controller="Tutoriums" asp-action="Index">
+    <p>
+        Buscar: <input type="text" name="buscar" class="form-text" />
+        <input type="submit" value="Buscar" class="btn btn-sm btn-dark" />
+        <a asp-action="Index" class="btn btn-outline-info">Lista completa</a>
+    </p>
+</form>
 
 <table class="table">
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.FechaCreacion)
+                FechaCreacion
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.HoraInicio)
+                HoraInicio
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.HoraFinal)
+                HoraFinal
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Tema)
+                Tema
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.CodigoAreaNavigation)
+                CodigoAreaNavigation
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.CodigoCursoNavigation)
+                CodigoCursoNavigation
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.CodigoTutorNavigation)
+                CodigoTutorNavigation
             </th>
             <th></th>
         </tr>
@@ -74,3 +82,29 @@
 }
     </tbody>
 </table>
+
+@{
+    var anteriordeshabilitado = !Model.PaginasAnteriores ? "disabled" : "";
+    var siguientedeshabilitado = !Model.PaginasPosteriores ? "disabled" : "";
+}
+
+<div class="container mt-3">
+    <ul class="pagination pagination-lg justify-content-end">
+        <a asp-action="Index" asp-route-ordenActual="@ViewData["OrdenActual"]"
+           asp-route-numpag="@(Model.PaginaInicio - 1)" asp-route-filtroActual="@ViewData["FiltroActual"]"
+           class="btn btn-primary @anteriordeshabilitado">Anterior</a>
+
+        @for (var i = 1; i <= Model.PaginasTotales; i++)
+        {
+            var paginaactiva = (i == Model.PaginaInicio) ? "active" : "";
+            <a asp-action="Index" asp-route-ordenActual="@ViewData["OrdenActual"]" asp-route-numpag="@i"
+           asp-route-filtroActual="@ViewData["FiltroActual"]" class="btn btn-primary @paginaactiva">
+                @i
+            </a>
+        }
+
+        <a asp-action="Index" asp-route-ordenActual="@ViewData["OrdenActual"]"
+           asp-route-numpag="@(Model.PaginaInicio + 1)" asp-route-filtroActual="@ViewData["FiltroActual"]"
+           class="btn btn-primary @siguientedeshabilitado">Siguiente</a>
+    </ul>
+</div>
