Agregando boton de calcular promedio

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -48,13 +48,15 @@
                     </a>
                     <ul class="nav nav-pills flex-column mb-sm-auto mb-0 align-items-center align-items-sm-start" id="menu">
                         <li>
-                            <a href="#" class="nav-link px-0 align-middle">
+                            <a asp-controller="Home" asp-action="Index" class="nav-link px-0 align-middle">
                                 <i class="fs-4 bi-speedometer2 icon"></i> <span class="ms-1 d-none d-sm-inline text-dark">Dashboard</span>
                             </a>
                         </li>
                         <li>
-                            <a href="#" class="nav-link px-0 align-middle">
+                            <a asp-controller="Registro" asp-action="Principal"  class="nav-link px-0 align-middle">
+                                
                                 <i class=" fs-4 bi bi-r-circle icon"></i> <span class="ms-1 d-none d-sm-inline text-dark">Registro</span>
+
                             </a>
                         </li>
                         <li>
