--- a/Views/FichaCalificacions/Edit.cshtml
+++ b/Views/FichaCalificacions/Edit.cshtml
@@ -39,8 +39,11 @@
                 <span asp-validation-for="Notas" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <button type="button" class="btn btn-primary" onclick="calcularPromedio()">Calcular Promedio</button>
+            </div>
+            <div class="form-group">
                 <label asp-for="Promedio" class="control-label"></label>
-                <input asp-for="Promedio" class="form-control" />
+                <input asp-for="Promedio" class="form-control" readonly data-val-required="Por favor, complete este campo." />
                 <span asp-validation-for="Promedio" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -68,6 +71,27 @@
 <div>
     <a asp-action="Index">Back to List</a>
 </div>
+
+<script>
+    function calcularPromedio() {
+        var notas = document.querySelector('#Notas').value;
+        var valores = notas.split(",");
+        var suma = 0;
+        var contador = 0;
+
+        for (var i = 0; i < valores.length; i++) {
+            var valor = parseInt(valores[i]);
+            if (!isNaN(valor)) {
+                suma += valor;
+                contador++;
+            }
+        }
+        var promedio = suma / contador;
+
+        //var promedio = (parseFloat(calificacion1) + parseFloat(calificacion2)) / 2;
+        document.querySelector('#Promedio').value = promedio;
+    }
+</script>
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
