--- a/wwwroot/css/home.css
+++ b/wwwroot/css/home.css
@@ -3147,7 +3147,7 @@ textarea.form-control-lg {
     --bs-btn-font-weight: 400;
     --bs-btn-line-height: 1.5;
     --bs-btn-color: white;
-    --bs-btn-bg: #808000;
+    /*--bs-btn-bg: #808000;*/
     --bs-btn-border-width: 1px;
     --bs-btn-border-color: transparent;
     --bs-btn-border-radius: 0.375rem;
